Update README and documentation for Mako platform
- Revamped the README to reflect the new branding and messaging for Mako, emphasizing its capabilities as an AI data analyst for modern RevOps.
- Added a new documentation page on connecting external databases, specifically MongoDB Atlas, to enhance user guidance.
- Updated links in the documentation and website to point to the correct GitHub repository and application URL.
- Improved navigation structure in the documentation to include a dedicated section for databases.

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -11,7 +11,7 @@ hero:
       link: /prd/
       icon: right-arrow
     - text: View on GitHub
-      link: https://github.com/your-repo
+      link: https://github.com/mako-ai/mono
       icon: external
       variant: minimal
 ---
